SERVER-39323 refactor index spec validation code to make it more modularized and flexible.

- Remove a "$freelist" collection reference, which was removed with MMAPv1
- Modularize a {buildIndexes:false} check that causes a IndexAlreadyExists error to be returned
- Split IndexCatalog::removeExistingIndexes into removeExistingIndexes and removeExistingIndexesNoChecks,
  to be more explicit about the internal behavior.